// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TeamOverviewDialog > renders correctly 1`] = `
<div
  data-v-d07450fa=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-d07450fa=""
    iconcolor="secondary-text"
    title="Operators"
    titleicon="M12,15C7.58,15 4,16.79 4,19V21H20V19C20,16.79 16.42,15 12,15M8,9A4,4 0 0,0 12,13A4,4 0 0,0 16,9M11.5,2C11.2,2 11,2.21 11,2.5V5.5H10V3C10,3 7.75,3.86 7.75,6.75C7.75,6.75 7,6.89 7,8H17C16.95,6.89 16.25,6.75 16.25,6.75C16.25,3.86 14,3 14,3V5.5H13V2.5C13,2.21 12.81,2 12.5,2H11.5Z"
  />
  <v-card-text-stub
    class="py-0"
    data-v-d07450fa=""
    tag="div"
  >
    <shiftview-cards-list-stub
      additionallineprops="[object Object]"
      bordercolorkey=""
      class="card-list"
      data-v-d07450fa=""
      dense="false"
      disabled="false"
      iconcolorfn="[Function]"
      iconfn="[Function]"
      items=""
      primaryactionicon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
      primaryactiontext=""
      primaryactiontooltip=""
      secondaryactionicon="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
      secondaryactiontooltip=""
      subtitleitemsprops="[object Object]"
      tertiaryactionicon=""
      tertiaryactiontooltip=""
      titleiconfn="[Function]"
      titletextkey="cardTitle"
      verticalsubtitle="false"
    />
  </v-card-text-stub>
  <v-card-actions-stub
    class=""
    data-v-d07450fa=""
    tag="div"
  >
    <evocon-v-button-stub
      color=""
      data-v-d07450fa=""
      icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
      iconcolor=""
      id="overview-close-btn"
      text="Operators"
      textclass=""
      type="primary-light"
    />
    <v-spacer-stub
      data-v-d07450fa=""
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      data-v-d07450fa=""
      icon=""
      iconcolor=""
      id="overview-close-btn"
      text="Close"
      textclass=""
      type="secondary"
    />
  </v-card-actions-stub>
</div>
`;

exports[`TeamOverviewDialog > renders correctly in mobile 1`] = `
<div
  data-v-d07450fa=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-d07450fa=""
    iconcolor="secondary-text"
    title="Operators"
    titleicon="M12,15C7.58,15 4,16.79 4,19V21H20V19C20,16.79 16.42,15 12,15M8,9A4,4 0 0,0 12,13A4,4 0 0,0 16,9M11.5,2C11.2,2 11,2.21 11,2.5V5.5H10V3C10,3 7.75,3.86 7.75,6.75C7.75,6.75 7,6.89 7,8H17C16.95,6.89 16.25,6.75 16.25,6.75C16.25,3.86 14,3 14,3V5.5H13V2.5C13,2.21 12.81,2 12.5,2H11.5Z"
  />
  <v-card-text-stub
    class="py-0"
    data-v-d07450fa=""
    tag="div"
  >
    <shiftview-cards-list-stub
      additionallineprops="[object Object]"
      bordercolorkey=""
      class="card-list card-list--mobile"
      data-v-d07450fa=""
      dense="true"
      disabled="false"
      iconcolorfn="[Function]"
      iconfn="[Function]"
      items=""
      primaryactionicon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
      primaryactiontext=""
      primaryactiontooltip=""
      secondaryactionicon="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
      secondaryactiontooltip=""
      subtitleitemsprops="[object Object]"
      tertiaryactionicon=""
      tertiaryactiontooltip=""
      titleiconfn="[Function]"
      titletextkey="cardTitle"
      verticalsubtitle="false"
    />
  </v-card-text-stub>
  <v-card-actions-stub
    class=""
    data-v-d07450fa=""
    tag="div"
  >
    <evocon-v-button-stub
      color=""
      data-v-d07450fa=""
      icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
      iconcolor=""
      id="overview-close-btn"
      text="Operators"
      textclass=""
      type="primary-light"
    />
    <v-spacer-stub
      data-v-d07450fa=""
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      data-v-d07450fa=""
      icon=""
      iconcolor=""
      id="overview-close-btn"
      text="Close"
      textclass=""
      type="secondary"
    />
  </v-card-actions-stub>
</div>
`;

exports[`TeamOverviewDialog > renders correctly in tablet 1`] = `
<div
  data-v-d07450fa=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-d07450fa=""
    iconcolor="secondary-text"
    title="Operators"
    titleicon="M12,15C7.58,15 4,16.79 4,19V21H20V19C20,16.79 16.42,15 12,15M8,9A4,4 0 0,0 12,13A4,4 0 0,0 16,9M11.5,2C11.2,2 11,2.21 11,2.5V5.5H10V3C10,3 7.75,3.86 7.75,6.75C7.75,6.75 7,6.89 7,8H17C16.95,6.89 16.25,6.75 16.25,6.75C16.25,3.86 14,3 14,3V5.5H13V2.5C13,2.21 12.81,2 12.5,2H11.5Z"
  />
  <v-card-text-stub
    class="py-0"
    data-v-d07450fa=""
    tag="div"
  >
    <shiftview-cards-list-stub
      additionallineprops="[object Object]"
      bordercolorkey=""
      class="card-list card-list--tablet"
      data-v-d07450fa=""
      dense="false"
      disabled="false"
      iconcolorfn="[Function]"
      iconfn="[Function]"
      items=""
      primaryactionicon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
      primaryactiontext=""
      primaryactiontooltip=""
      secondaryactionicon="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
      secondaryactiontooltip=""
      subtitleitemsprops="[object Object]"
      tertiaryactionicon=""
      tertiaryactiontooltip=""
      titleiconfn="[Function]"
      titletextkey="cardTitle"
      verticalsubtitle="false"
    />
  </v-card-text-stub>
  <v-card-actions-stub
    class="fullscreen-card-actions"
    data-v-d07450fa=""
    tag="div"
  >
    <evocon-v-button-stub
      color=""
      data-v-d07450fa=""
      icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
      iconcolor=""
      id="overview-close-btn"
      text="Operators"
      textclass=""
      type="primary-light"
    />
    <v-spacer-stub
      data-v-d07450fa=""
      tag="div"
    />
    <evocon-v-button-stub
      color=""
      data-v-d07450fa=""
      icon=""
      iconcolor=""
      id="overview-close-btn"
      text="Close"
      textclass=""
      type="secondary"
    />
  </v-card-actions-stub>
</div>
`;
